holiday template add

--- a/placement.html
+++ b/placement.html
@@ -299,6 +299,7 @@
                       <li><a href="hr_staff.html">Staff</a></li>
                        <li><a href="hr_staffSalary.html">Salary Overview</a></li>
                        <li><a href="hr_leave.html">Staff Leave</a></li>
+                       <li><a href="holidayList.html">Setting</a></li>
                     </ul>
                   </li>
                 </ul>
