--- a/hr_addStaff.html
+++ b/hr_addStaff.html
@@ -326,7 +326,7 @@
                     </div>
                     <div class="email-wrap bookmark-wrap">
                         <div class="row">
-                            <div class="h-100 position-sticky col-xl-3 box-col-4 xl-30">
+                            <div class="h-100 position-sticky col-xl-2 box-col-3 xl-10">
                                 <div class="md-sidebar-aside">
                                     <div class="card">
                                         <div class="card-body  ">
@@ -347,6 +347,10 @@
                                                     <li><a id="" data-bs-toggle="pill" href="" role="tab"
                                                             aria-controls="pills-created" aria-selected="false"><span
                                                                 class="title">Attendance</span></a></li>
+                                                    <li><a class="show" id="pills-delayed-tab" data-bs-toggle="pill"
+                                                        href="#pills-delayed" role="tab"
+                                                        aria-controls="pills-delayed" aria-selected="false"><span
+                                                            class="title">Salary Overview</span></a></li>
                                                     <li><a class="show" id="pills-todaytask-tab" data-bs-toggle="pill"
                                                             href="#pills-todaytask" role="tab"
                                                             aria-controls="pills-todaytask" aria-selected="false"><span
@@ -364,7 +368,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-9 col-md-12box-col-8 xl-70">
+                            <div class="col-xl-10 col-md-12 box-col-9 xl-90">
                                 <!-- Personal  -->
                                 <div class="email-right-aside bookmark-tabcontent">
                                     <div class="card email-body radius-left">
