--- a/hr_salary_edit.html
+++ b/hr_salary_edit.html
@@ -126,6 +126,7 @@
         </div>
         <!-- Page Header Ends -->
         <!-- Page Body Start-->
+
         <div class="page-body-wrapper horizontal-menu">
             <!-- Page Sidebar Start-->
             <header class="main-nav">
@@ -277,31 +278,13 @@
                                                             <div class="dash-breadcrumb mt-4">
                                                                 <div class="row">
                                                                     <div class="col-6">
-                                                                        <h5 class="f-w-600">Revise Salary Structure</h5>
+                                                                        <h5 class="f-w-600">Edit Salary Structure</h5>
                                                                     </div>
                                                                 </div>
                                                             </div>
                                                             <hr />
                                                             <div class="row">
-                                                                <div class="col-2">
-                                                                    <div class="form-group">
-                                                                        <label for="first_name">Staff Type</label>
-                                                                        <input type="text" class="form-control"
-                                                                            id="first_name" name="first_name"
-                                                                            placeholder="Enter First Name"
-                                                                            value="Regular" disabled />
-                                                                    </div>
-                                                                </div>
-                                                                <div class="col-2">
-                                                                    <div class="form-group">
-                                                                        <label for="first_name">Wage Rate</label>
-                                                                        <input type="text" class="form-control"
-                                                                            id="first_name" name="first_name"
-                                                                            placeholder="Enter First Name" value=""
-                                                                            disabled />
-                                                                    </div>
-                                                                </div>
-                                                                <div class="col-2">
+                                                                <div class="col-3">
                                                                     <div class="form-group">
                                                                         <label for="marital_status">Template</label>
                                                                         <select class="form-select" id="role"
@@ -318,7 +301,7 @@
                                                                         <label for="marital_status">Effective
                                                                             cycle</label>
                                                                         <select class="form-select" id="role"
-                                                                            name="role">
+                                                                            name="role" disabled>
                                                                             <option disabled selected>July 2024
                                                                             </option>
                                                                             <option value="Regular">June 2024
@@ -330,30 +313,16 @@
                                                             </div>
                                                             <div class="border-bottom mb-4 mt-3 mr-4"></div>
                                                             <div class="row">
-                                                                <div class="col-2">
-                                                                    <div class="form-group">
-                                                                        <label for="first_name">Current CTC</label>
-                                                                        <input type="text" class="form-control"
-                                                                            id="first_name" name="first_name"
-                                                                            placeholder="Enter First Name"
-                                                                            value="₹120000" disabled />
-                                                                    </div>
-                                                                </div>
-                                                                <div class="col-2">
-                                                                    <div class="form-group">
-                                                                        <label for="first_name">Revise by
-                                                                            percent</label>
-                                                                        <input type="text" class="form-control"
-                                                                            id="first_name" name="first_name"
-                                                                            placeholder="Enter First Name" value="0%" />
-                                                                    </div>
+                                                                <div class="col-2 mt-4">
+                                                                        <span class="f-w-600">Employee Salary CTC</span>
                                                                 </div>
                                                                 <div class="col-2">
                                                                     <div class="form-group">
                                                                         <label for="first_name">Monthly Amount</label>
                                                                         <input type="text" class="form-control"
                                                                             id="first_name" name="first_name"
-                                                                            placeholder="Enter First Name" value="₹1" />
+                                                                            placeholder="Enter First Name"
+                                                                            value="₹120000" disabled />
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -423,7 +392,7 @@
                                                                 <div class="col-2">
                                                                     <div class="form-group">
                                                                         <input type="text" class="form-control"
-                                                                            id="contact" name="contact" value="0.00"
+                                                                            id="contact" name="contact" value="₹ 1"
                                                                             placeholder="Enter Emergency Contact" />
                                                                     </div>
                                                                 </div>
