--- a/holiday_template.html
+++ b/holiday_template.html
@@ -354,7 +354,7 @@
                                         <tr>
                                             <th>Holiday Name</th>
                                             <th>Holiday Date</th>
-                                            <th>TOo Date</th>
+                                            <th>To Date</th>
                                             <th>Action</th>
                                         </tr>
                                     </thead>
