--- a/hr_create_holiday.html
+++ b/hr_create_holiday.html
@@ -296,6 +296,46 @@
             </header>
             <!-- Page Sidebar Ends-->
             <div class="page-body">
+                
+                <div class="container-fluid">
+                    <div class="email-wrap bookmark-wrap">
+                        <div class="row">
+                            <!-- sidebar-->
+                            <div class="col-xl-2 box-col-3 xl-10">
+                                <div class="md-sidebar-aside">
+                                    <div class="card">
+                                        <div class="card-body">
+                                            <div class="email-app-sidebar left-bookmark">
+                                                <ul class="nav main-menu" role="tablist">
+                                                    <li><a id="pills-created-tab" href="hr_staffProfile.html" role="tab"
+                                                            aria-controls="pills-created" aria-selected="true"><span
+                                                                class="title">Profile</span></a></li>
+                                                    <li><a id="" href="hr_leave.html" role="tab"
+                                                            aria-controls="pills-created" aria-selected="false"><span
+                                                                class="title">Attendance</span></a></li>
+                                                    <li><a class="show" id="pills-delayed-tab" href="hr_staffSalary.html" role="tab"
+                                                            aria-controls="pills-delayed" aria-selected="false"><span
+                                                                class="title">Salary Overview</span></a></li>
+                                                    <li><a class="show" id="pills-todaytask-tab" href="hr_salary_structure.html" role="tab"
+                                                            aria-controls="pills-todaytask" aria-selected="false"><span
+                                                                class="title">Salary Structure</span></a></li>
+                                                    <li><a class="show" id="pills-delayed-tab" href="hr_holiday_template.html" role="tab"
+                                                            aria-controls="pills-delayed" aria-selected="false"><span
+                                                                class="title">Holiday Template</span></a></li>
+                                                    <li><a class="show" id="pills-delayed-tab" href="hr_settings.html" role="tab"
+                                                            aria-controls="pills-delayed" aria-selected="false"><span
+                                                                class="title">Settings</span></a></li>
+                                                    <li>
+                                                    <li>
+                                                        <hr>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xl-10 col-md-12 box-col-9 xl-90">
                 <div class="container-fluid">
                     <div class="page-header dash-breadcrumb py-3">
                         <div class="row">
@@ -303,7 +343,7 @@
                                 <h3 class="f-w-600">Create Template</h3>
                             </div>
                             <div class="col-6 d-flex justify-content-end">
-                                <a href="holidayList.html" class="text-black"><button
+                                <a href="hr_holiday_template.html" class="text-black"><button
                                         class="btn btn-pill btn-primary mx-2">Back</button></a>
                             </div>
                         </div>
@@ -328,19 +368,19 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-4 d-flex align-items-center justify-content-end"> <!-- Adjusted classes here -->
-                                    <button class="btn btn-pill btn-primary">Create</button>
+                                    <button class="btn btn-pill btn-primary">Add</button>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
                 
-                <div class="row">
+                <!-- <div class="row">
                     <div class="col-12 d-flex justify-content-end">
                         <button class="btn btn-pill btn-primary" data-bs-toggle="modal"
                             data-bs-target="#createHolidayModal">Add Holiday</button>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="container-fluid">
                     <div class="col-6">
@@ -354,7 +394,7 @@
                                         <tr>
                                             <th>Holiday Name</th>
                                             <th>Holiday Date</th>
-                                            <th>TOo Date</th>
+                                            <th>To Date</th>
                                             <th>Action</th>
                                         </tr>
                                     </thead>
@@ -435,6 +475,10 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+</div>
+</div>
             <!-- Container-fluid Ends-->
 
             <!-- <div class="sticky-footer">
