--- a/hr_holiday_template.html
+++ b/hr_holiday_template.html
@@ -310,7 +310,7 @@
                     <div class="row">
                         <div class="col-lg-12 row d-flex justify-content-end align-items-end">
                             <div class="col-lg-3 d-flex justify-content-end align-items-end">
-                                <a href="holiday_template.html">
+                                <a href="hr_create_holiday.html">
 
                                     <button class="btn btn-pill btn-primary">Create Template</button>
                                 </a>
@@ -329,12 +329,12 @@
                                 <div class="col-2 fs-6">4 Holidays</div>
                                 <div class="col-2 fs-6">Applied 17 Staff(s)</div>
                                 <div class="col-2 fs-6">
-                                    <a href="manage_staff_holiday.html">
+                                    <a href="hr_holiday_manage.html">
                                         <button class="custom-button">Manage Staff List</button>
                                     </a>
                                 </div>
                                 <div class="col-2 fs-6">
-                                    <a href="holiday_template.html">
+                                    <a href="hr_create_holiday.html">
                                         <button class="custom-button">Edit Template</button>
                                     </a>
                                 </div>
