--- a/hr_staffSalary.html
+++ b/hr_staffSalary.html
@@ -356,9 +356,48 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="email-wrap bookmark-wrap">
+                            <div class="row">
+                                <div class="col-xl-2 box-col-3 xl-10">
+                                    <div class="md-sidebar-aside">
+                                        <div class="card">
+                                            <div class="card-body">
+                                                <div class="email-app-sidebar left-bookmark">
+                                                    <ul class="nav main-menu" role="tablist">
+                                                        <li><a id="pills-created-tab" href="hr_staffProfile.html" role="tab"
+                                                                aria-controls="pills-created" aria-selected="true"><span
+                                                                    class="title">Profile</span></a></li>
+                                                        <li><a id="" href="hr_leave.html" role="tab"
+                                                                aria-controls="pills-created" aria-selected="false"><span
+                                                                    class="title">Attendance</span></a></li>
+                                                        <li><a class="show" id="pills-delayed-tab" href="hr_staffSalary.html" role="tab"
+                                                                aria-controls="pills-delayed" aria-selected="false"><span
+                                                                    class="title">Salary Overview</span></a></li>
+                                                        <li><a class="show" id="pills-todaytask-tab" href="hr_salary_structure.html" role="tab"
+                                                                aria-controls="pills-todaytask" aria-selected="false"><span
+                                                                    class="title">Salary Structure</span></a></li>
+                                                        <li><a class="show" id="pills-delayed-tab" href="hr_holiday_template.html" role="tab"
+                                                                aria-controls="pills-delayed" aria-selected="false"><span
+                                                                    class="title">Holiday Template</span></a></li>
+                                                        <li><a class="show" id="pills-delayed-tab" href="hr_settings.html" role="tab"
+                                                                aria-controls="pills-delayed" aria-selected="false"><span
+                                                                    class="title">Settings</span></a></li>
+                                                        <li>
+                                                        <li>
+                                                            <hr>
+                                                        </li>
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-xl-10 col-md-12 box-col-9 xl-90 mt-4">
+                        <div class="email-right-aside bookmark-tabcontent">
                         <div class="">
                             <div class="ps-0">
                                 <!--old view-->
+
                                 <div class="">
                                     <!-- Month Card Template -->
                                     <div class="staff-card shadow month-card p-2">
@@ -841,6 +880,10 @@
                                 </div>
                             </div>
                         </div>
+                        </div>
+                        </div>
+                    </div>
+                </div>
                     </div>
                 </div>
             </div>
