--- a/hr_holiday_manage.html
+++ b/hr_holiday_manage.html
@@ -226,6 +226,46 @@
             <!-- Page Sidebar Ends-->
             <div class="page-body">
                 <div class="container-fluid">
+                    <div class="email-wrap bookmark-wrap">
+                        <div class="row">
+                            <!-- sidebar-->
+                            <div class="col-xl-2 box-col-3 xl-10">
+                                <div class="md-sidebar-aside">
+                                    <div class="card">
+                                        <div class="card-body">
+                                            <div class="email-app-sidebar left-bookmark">
+                                                <ul class="nav main-menu" role="tablist">
+                                                    <li><a id="pills-created-tab" href="hr_staffProfile.html" role="tab"
+                                                            aria-controls="pills-created" aria-selected="true"><span
+                                                                class="title">Profile</span></a></li>
+                                                    <li><a id="" href="hr_leave.html" role="tab"
+                                                            aria-controls="pills-created" aria-selected="false"><span
+                                                                class="title">Attendance</span></a></li>
+                                                    <li><a class="show" id="pills-delayed-tab" href="hr_staffSalary.html" role="tab"
+                                                            aria-controls="pills-delayed" aria-selected="false"><span
+                                                                class="title">Salary Overview</span></a></li>
+                                                    <li><a class="show" id="pills-todaytask-tab" href="hr_salary_structure.html" role="tab"
+                                                            aria-controls="pills-todaytask" aria-selected="false"><span
+                                                                class="title">Salary Structure</span></a></li>
+                                                    <li><a class="show" id="pills-delayed-tab" href="hr_holiday_template.html" role="tab"
+                                                            aria-controls="pills-delayed" aria-selected="false"><span
+                                                                class="title">Holiday Template</span></a></li>
+                                                    <li><a class="show" id="pills-delayed-tab" href="hr_settings.html" role="tab"
+                                                            aria-controls="pills-delayed" aria-selected="false"><span
+                                                                class="title">Settings</span></a></li>
+                                                    <li>
+                                                    <li>
+                                                        <hr>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xl-10 col-md-12 box-col-9 xl-90">
+
+                <div class="container-fluid">
                     <div class="container-fluid">
                         <div class="page-header dash-breadcrumb py-3">
                             <div class="row">
@@ -233,7 +273,7 @@
                                     <h3 class="f-w-600">Manage Staff</h3>
                                 </div>
                                 <div class="col-6 d-flex justify-content-end">
-                                    <a href="holidayList.html" class="text-black"><button
+                                    <a href="hr_holiday_template.html" class="text-black"><button
                                             class="btn btn-pill btn-primary mx-2">Back</button></a>
                                 </div>
                             </div>
@@ -343,6 +383,10 @@
                 </div>
             </div>
         </div>
+    </div>
+</div>
+</div>
+</div>
         <!-- footer start-->
         <footer class="footer m-0">
             <div class="container-fluid">
