--- a/hr_salary_history.html
+++ b/hr_salary_history.html
@@ -228,15 +228,55 @@
             <!-- Page Sidebar Ends-->
             
             <div class="page-body">
+                <div class="container-fluid">
+                    <div class="email-wrap bookmark-wrap">
+                        <div class="row">
+
+                            <div class="col-xl-2 box-col-3 xl-10">
+                                <div class="md-sidebar-aside">
+                                    <div class="card">
+                                        <div class="card-body">
+                                            <div class="email-app-sidebar left-bookmark">
+                                                <ul class="nav main-menu" role="tablist">
+                                                    <li><a id="pills-created-tab" href="hr_staffProfile.html" role="tab"
+                                                            aria-controls="pills-created" aria-selected="true"><span
+                                                                class="title">Profile</span></a></li>
+                                                    <li><a id="" href="hr_leave.html" role="tab"
+                                                            aria-controls="pills-created" aria-selected="false"><span
+                                                                class="title">Attendance</span></a></li>
+                                                    <li><a class="show" id="pills-delayed-tab" href="hr_staffSalary.html" role="tab"
+                                                            aria-controls="pills-delayed" aria-selected="false"><span
+                                                                class="title">Salary Overview</span></a></li>
+                                                    <li><a class="show" id="pills-todaytask-tab" href="hr_salary_structure.html" role="tab"
+                                                            aria-controls="pills-todaytask" aria-selected="false"><span
+                                                                class="title">Salary Structure</span></a></li>
+                                                    <li><a class="show" id="pills-delayed-tab" href="hr_holiday_template.html" role="tab"
+                                                            aria-controls="pills-delayed" aria-selected="false"><span
+                                                                class="title">Holiday Template</span></a></li>
+                                                    <li><a class="show" id="pills-delayed-tab" href="hr_settings.html" role="tab"
+                                                            aria-controls="pills-delayed" aria-selected="false"><span
+                                                                class="title">Settings</span></a></li>
+                                                    <li>
+                                                    <li>
+                                                        <hr>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                <div class="col-xl-10 col-md-12 box-col-9 xl-90">
 
                 <div class="page-header dash-breadcrumb py-3">
                     <div class="row">
                         <div class="col-6">
-                            <h3 class="f-w-600">Staff List</h3>
+                            <h3 class="f-w-600">Revision History</h3>
                         </div>
                         <div class="col-6 d-flex justify-content-end">
-                            <a href="hr_addStaff.html" class="text-black"><button
-                                    class="btn btn-pill btn-primary mx-2">Add Staff</button></a>
+                            <a href="hr_salary_structure.html" class="text-black"><button
+                                    class="btn btn-pill btn-primary mx-2">Back</button></a>
                         </div>
                     </div>
                 </div>
@@ -269,6 +309,10 @@
                     </div>
                   </div>
             </div>
+            </div>
+        </div>
+    </div>
+    </div>
 
                 <!-- Container-fluid Ends-->
                 <!-- footer start-->
