--- a/hr_salary_structure.html
+++ b/hr_salary_structure.html
@@ -221,29 +221,24 @@
                                         <div class="card-body">
                                             <div class="email-app-sidebar left-bookmark">
                                                 <ul class="nav main-menu" role="tablist">
-                                                    <li><a id="pills-created-tab" data-bs-toggle="pill"
-                                                            href="hr_staffProfile.html" role="tab"
+                                                    <li><a id="pills-created-tab" href="hr_staffProfile.html" role="tab"
                                                             aria-controls="pills-created" aria-selected="true"><span
                                                                 class="title">Profile</span></a></li>
-                                                    <li><a id="" data-bs-toggle="pill" href="hr_leave.html" role="tab"
+                                                    <li><a id="" href="hr_leave.html" role="tab"
                                                             aria-controls="pills-created" aria-selected="false"><span
                                                                 class="title">Attendance</span></a></li>
-                                                    <li><a class="show" id="pills-delayed-tab" data-bs-toggle="pill"
-                                                        href="hr_staffSalary.html" role="tab"
-                                                        aria-controls="pills-delayed" aria-selected="false"><span
-                                                            class="title">Salary Overview</span></a></li>
-                                                    <li><a class="show" id="pills-todaytask-tab" data-bs-toggle="pill"
-                                                            href="hr_salary_structure.html" role="tab"
+                                                    <li><a class="show" id="pills-delayed-tab" href="hr_staffSalary.html" role="tab"
+                                                            aria-controls="pills-delayed" aria-selected="false"><span
+                                                                class="title">Salary Overview</span></a></li>
+                                                    <li><a class="show" id="pills-todaytask-tab" href="hr_salary_structure.html" role="tab"
                                                             aria-controls="pills-todaytask" aria-selected="false"><span
                                                                 class="title">Salary Structure</span></a></li>
-                                                    <li><a class="show" id="pills-delayed-tab" data-bs-toggle="pill"
-                                                            href="hr_holiday_template" role="tab"
+                                                    <li><a class="show" id="pills-delayed-tab" href="hr_holiday_template.html" role="tab"
                                                             aria-controls="pills-delayed" aria-selected="false"><span
                                                                 class="title">Holiday Template</span></a></li>
-                                                    <li><a class="show" id="pills-delayed-tab" data-bs-toggle="pill"
-                                                        href="hr_settings.html" role="tab"
-                                                        aria-controls="pills-delayed" aria-selected="false"><span
-                                                            class="title">Settings</span></a></li>
+                                                    <li><a class="show" id="pills-delayed-tab" href="hr_settings.html" role="tab"
+                                                            aria-controls="pills-delayed" aria-selected="false"><span
+                                                                class="title">Settings</span></a></li>
                                                     <li>
                                                     <li>
                                                         <hr>
@@ -277,7 +272,7 @@
                                                                     <li><a class="dropdown-item disabled"
                                                                             href="hr_salary_revise.html">Revise</a></li>
                                                                     <li><a class="dropdown-item" href="hr_salary_edit.html">Edit</a></li>
-                                                                    <li><a class="dropdown-item" href="#">History</a></li>
+                                                                    <li><a class="dropdown-item" href="hr_salary_history.html">History</a></li>
                                                                 </ul>
                                                             </div>
                                                         </div>
